feat: 完成了浏览记录并递增和点赞功能的实现
